--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -1,7 +1,7 @@
 ---
 title: "W_UP_01"
-author: "Maximiliano Ortiz"
-date: "Fall 2025"
+author: "Maximiliano ortiz"
+date: "fall 2025"
 output: html_document
 ---
 
@@ -41,9 +41,22 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 
 <!--Graphical results here. Make sure to show your code. Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too. Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+
+```{r}
+boxplot(pushups~position,data=mydata)
+```
+  
+The first quartile of the "skill" players is bigger than the third quartile of the "Line" players. I believe that what Dr.k told us that in these situations there will be a statistical difference and that's what I think I'll observe.  
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+```{r}
+favstats(pushups~position,data=mydata)
+```
+
+I observed that there is a total of 8 "Line" players and 22 "skill" players. The average number that a "Line" player can do is 17.12500 pushups, while the "Skill" players can do an average 49.72727 pushups. 	
 
 ## Inferential Results
 
