--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -63,6 +63,12 @@ I observed that there is a total of 8 "Line" players and 22 "skill" players. The
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 
+```{r}
+t.test(pushups~position,data=mydata)
+```
+
+The chances of getting the results like this if there is no difference in means between group "Line" and "Skill" is equal to .000009421. Such a really low p-value like that allowed me to concluded that there really is a big margin between "Line" players and "Skill" players.
+
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
