Discussion and Conclusion

--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -73,3 +73,4 @@ The chances of getting the results like this if there is no difference in means 
 
 <!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
 
+In this write up I learned how to plug in data whether it's a box plot, favstats, or t-test. I was able to observe all numerical data. For example in the Box plot chart I was able to analyse that the "Skill" players could do more push ups than the "Line" players because the "Skill" players had a bigger first quartile that the "Line" players third quartile. Another example would be in the favstats where I got all the exact number of players and there average. The "Skill" players average was higher than the "Line players average. Lastly in the T-test I got the P-value which was really low and it showed the big margin between "Skill and "Line" players. This is what I learned in this write up today.   
